--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="./download.png" alt="" width="200" height="100" />
+      <img class="logo" src="./download.png" alt=""/>
       <div class="menu-container">
         <h3>Why</h3>
         <h3>Who</h3>
