--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
       <img class="logo" src="./download.png" alt=""/>
       <div class="menu-container">
-        <h3>Why</h3>
-        <h3>Who</h3>
-        <h3>How</h3>
-        <h3>What</h3>
+        <h3>Our Services</h3>
+        <h3>Our Team</h3>
+        <h3>On Going Projects</h3>
+        <h3>About</h3>
         <h3>Contacts</h3>
       </div>
     </header>
